# tpm2-tss-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
serde-tpm2/: Cargo.toml
serde-tpm2/src/: de.rs  de_sized.rs  error.rs  lib.rs  log.rs  se.rs
tpm2-tcti-rm/: Cargo.toml
tpm2-tcti-rm/src/: bytes.rs  lib.rs  mu.rs  rm.rs
tpm2-types/: Cargo.toml  README.md
tpm2-types-alg/: Cargo.toml
tpm2-types-alg/src/: alg_variants.rs  lib.rs
tpm2-types-macro/: Cargo.toml
tpm2-types-macro/src/: alg_enums.rs  alg_variants.rs  handle_enums.rs  lib.rs
tpm2-types/src/: alg.rs  bitfields.rs  constants.rs  de.rs  enums.rs  handle_ranges.rs  handles.rs  lib.rs  main.rs  selectables.rs  structs.rs  util.rs
tpm2-types/src/alg/: mod.rs
tpm2-types/src/handles/: handle_ranges.rs  mod.rs
tpm2-types/src/serde_types/: big_array.rs  mod.rs  sized_vector.rs
tss2-tcti/: Cargo.toml
tss2-tcti-foobar/: Cargo.toml
tss2-tcti-foobar/src/: lib.rs
tss2-tcti-sys/: Cargo.toml  build.rs
tss2-tcti-sys/src/: lib.rs
tss2-tcti/src/: lib.rs  tctildr.rs
tss2-tcti/src/tcti/: error.rs  mod.rs
